			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.03a: *********************************

BUG: (07/19/05, DN) Layout Poly resistors are always shorted (Bug #439).
FIX: 1) Set different port topology to "ports of Layout Poly resistor in TSMC90 constructor.
     2) In HierarchyEnumerator distinguish poly resistor by its function

BUG: (07/18/05, GVG) DRC having problems to detect errors in default mode (one error per node pair) (Bug #421)
This was already reported in Bug #311 however solution there didn't fix #421.
FIX: New strategy based on original cell triggering Quick.checkCellInstContents.

IMP: (07/18/05, IM) NCC GUI: icons for wire class nodes in the tree

IMP: (07/15/05, DN) HierarchyEnumerator can shorten resistors.

IMP: (07/15/05, DN) "DumpHeap" and "AnalyzeHeap" commands in DebugMenus
     to assist in memory leakage investigateions.

IMP: (07/14/05, IM) Each comparison in NCC GUI displays the number of 
parts, wires, and ports in its cells.

BUG: (07/14/05, IM) Clicking on a hyperlink in Size Mismatch Table in NCC GUI
only highlights the top-level cell (bug 434).
FIX: obtain the proper cell from the MOS to be highlithed.

BUG: (07/14/05, IM) NCC GUI occasionally throws exception when moveCaretPosition()
method is invoked on JEditorPane (bug 429). This is a bug in Java 1.4 
(http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4688560).
FIX: call moveCaretPosition() through SwingUtilities.invokeLater().

IMP: (07/13/05, GVG) Making public fix for bug 312 (in previous commit was only available in debug mode).

IMP: (07/13/05, GVG) Poly resistors added in Schematics. They were implemented as variant of normal resistors
(following similar to capacitor approach).

IMP: (07/13/05, IM) NCC GUI features: Export Assertion failures,
Export conflicts, unrecognized MOSes

IMP: (07/13/05, RK) Double default height of Cells generated by MOCMOS gate layout generator
